---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 07. 05. 2024.
  Info:
    - Add support for logistic belt 2
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 10. 01. 2023.
  Info:
    - The mod can be used on character (can be disabled by settings)
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 21. 10. 2022.
  Info:
    - Add copy/paste from an assembly machine
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 28. 10. 2022.
  Info:
    - Initial release