@@ -8,11 +8,13 @@ filter_assistant=Filter assistant
 filter_assistant-add_filter=Add filter to containers
 filter_assistant-copy_paste_container=Copy paste filter from assembling machines to containers
 filter_assistant-use_on_player=Use assistant on player
+filter_assistant-col_count=Column count
 
 [mod-setting-description]
 filter_assistant-add_filter=Add filter to containers (normal, logistic, linked)
 filter_assistant-copy_paste_container=Copy paste filter from assembling machines to containers
 filter_assistant-use_on_player=Use assistant on player
+filter_assistant-col_count=Count of column to display filter
 
 [entity-name]
 
@@ -32,11 +34,11 @@ add=Add a new item slot at the end of the list above.
 apply=Apply filter definition to container. Move items to new place and set bar if possible.
 import=Create filter definition from the content of the container. Don't change container until "Apply" is clicked.
 clear=Clear all filter. Don't change container until "Apply" is clicked.
-up=Move line up (shift 5 lines)
-down=Move line down (shift 5 lines)
+up=Move one slot up (shift 5 slots)
+down=Move one slot down (shift 5 slots)
 count=Count of slot for this item
 sort=Sort the item list
-bp=Import / export filters as blueprint
+bp=Import / export filters as blueprint \n Click with BP in hand to import\n Click with nothing in hand to export
 
 [button]
 add=Add
